# graphiti-openclaw

./: .gitignore  README.md  pyproject.toml
configs/: config-openclaw.yaml
examples/: poc.py  test_real_data.py
src/graphiti_openclaw/: __init__.py  __main__.py  cli.py  compat_client.py  local_embedder.py  mcp_server.py
src/graphiti_openclaw.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
